Menu item alignment fixed

--- a/src/components/Menu/menu.css
+++ b/src/components/Menu/menu.css
@@ -7,7 +7,6 @@
 #media-block {
   position: relative;
   text-align: left;
-  padding-left: 2.3rem;
 }
 
 #card-heading {
